[package]
name = "fractals"
version = "0.1.0"
authors = ["Keenan Graham <keenangraham@stanford.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston_window = "*"


[[bin]]
name = "cantor_set"
path = "src/bin/cantor_set.rs"
